# plasma

./: .gitignore  CMakeLists.txt  COPYING  CTestCustom.cmake.in  HISTORY  LICENSE  README.md  config.h.cmake.in
bld/cmake/: .gitignore  CMakeLists.txt  FindGSpeak.cmake.in  FindICU.cmake  ObBoilerplate.cmake  ObCheckCFlags.cmake  ObCheckCxxFlags.cmake  ObCommonOpts.cmake  ObFindLibs.cmake  ObGeneratePC.cmake  ObGenerateProject.cmake  ObGetSettings.cmake  asanpreload  coverage.sh  diff-git-status-test.sh  gen-pc-deps.sh  get-ruby-include-dirs.rb  get-ruby-include-dirs.sh  get-ruby-libs.sh  get-version.sh  lsan-suppressions.txt  meson.build  tsan-suppressions.txt  yotest.in
bld/cmake/Oblong/: OblongConfig.cmake.in
doc/: .gitignore  CMakeLists.txt  Doxyfile.apps.in  Doxyfile.common.in  Doxyfile.internal.in  Doxyfile.latex.in  Doxyfile.platform.in  INSTALL  README  docbuilder.py  doxy-patella-filter.pl  doxygen.sty  footer.html  manual.pl  meson.build  new-glossary.doc  plasma.md
doc/emacs/: doxy-mode.el
libLoam/c/: .gitignore  CMakeLists.txt  LogCodeAssignments.txt  check-retorts.rb  dSFMT.c  datadir.c  dup-codes.pl  funny-codes.pl  generate-ob-log-usage.hs  loam-tutorial.c  meson.build  next-code.pl  ob-api.h  ob-atomic.c  ob-atomic.h  ob-attrs.h  ob-coretypes.h  ob-dirs.c  ob-dirs.h  ob-endian.h  ob-file.c  ob-file.h  ob-geom.h  ob-hash-32.S  ob-hash-64.S  ob-hash-city.c  ob-hash-win32.c  ob-hash.c  ob-hash.h  ob-log.c  ob-log.h  ob-math.c  ob-math.h  ob-mvtypes.h  ob-mvtypes.pl  ob-pthread.h  ob-rand.c  ob-rand.h  ob-retorts.c  ob-retorts.h  (+18 more)
libLoam/c++/: AnkleObject.cpp  AnkleObject.h  ArgParse.cpp  ArgParse.h  AxisAlignedBox.cpp  AxisAlignedBox.h  CMakeLists.txt  CrawlIterator.h  ErrnoSaver.h  FatherTime.cpp  FatherTime.h  Frustum.cpp  Frustum.h  GeomSlab.cpp  GeomSlab.h  GeomTransform.cpp  GeomTransform.h  Line.cpp  Line.h  LoamForward.h  LoamStreams.h  LoamxxRetorts.cpp  LoamxxRetorts.h  LogCodeAssignments.txt  Matrix44.cpp  Matrix44.h  Mutex.cpp  Mutex.h  OC_Functionary.h  OC_Helpy.h  OC_Undeffy.h  OH_Functionary.h  OM_Functionary.h  OM_Helpy.h  OT_Functionary.h  OT_Helpy.h  ObAcacia.h  ObColor.cpp  ObColor.h  ObCons.h  (+53 more)
libLoam/c++/samples/: CMakeLists.txt  meson.build
libLoam/c++/tests/: .gitignore  AxisAlignedBoxTests.cpp  BasicStrTest.cpp  CMakeLists.txt  Cxx11Test.cpp  EmptyStrTest.cpp  FatherTimeTest.cpp  FrustumTests.cpp  GeomClassesTest.cpp  GeomSlabTest.cpp  IterationStrTest.cpp  MinimalLoamTest.cpp  MoveTest.cpp  NullStrEqTest.cpp  ObAcaciaTest.cpp  ObConsTest.cpp  ObCrawlTest.cpp  ObHormelTest.cpp  ObInfoTest.cpp  ObInfoTest.rb  ObMapTest.cpp  ObRefTest.cpp  ObRetortTest.cpp  ObTroveTest.cpp  RectangleTests.cpp  RegexpStrTest.cpp  RetortPodTest.cpp  SphereTests.cpp  TheForceCanHaveAStrongInfluenceOnTheWeakMinded.cpp  Vect4Tests.cpp  VectTests.cpp  ankle-object-interface-specialization-test.cpp  aptest1.cpp  aptest3.cpp  aptest3.rb  benchmark-retorts-lib.cpp  benchmark-retorts.cpp  meson.build  test-helpers.rb  test-prepost-cxx.cpp  (+3 more)
libLoam/c++/win32/: Mutex_win32.cpp
libLoam/c/doc/: extending-ob-retort.md
libLoam/c/private/: dSFMT-params.h  dSFMT-params11213.h  dSFMT-params1279.h  dSFMT-params132049.h  dSFMT-params19937.h  dSFMT-params216091.h  dSFMT-params2203.h  dSFMT-params4253.h  dSFMT-params44497.h  dSFMT-params521.h  dSFMT-params86243.h  dSFMT.h  datadir.h  ob-hash-common.h  ob-syslog.h  prefix.h
libLoam/c/tests/: .gitignore  CMakeLists.txt  LoamGTest.cpp  TestAtomic.cpp  TestFile.cpp  meson.build  ob-cat.c  passwd.hs  quote.hs  self-test.txt  (+19 more)
libPlasma/bench/: .gitignore  CMakeLists.txt  LoneWorker.cpp  LoneWorker.h  PingPonger.cpp  PingPonger.h  Reader.cpp  Reader.h  SerialWorker.cpp  SerialWorker.h  TimeKeeper.cpp  TimeKeeper.h  Worker.cpp  Worker.h  Writer.cpp  Writer.h  bench-mode.el  benchmarks.bench  braid.cpp  bread.cpp  butter.cpp  parallel.bench  samples.bench  sandwich.cpp  sequential.bench  utils.cpp  utils.h
libPlasma/c/: .gitignore  CMakeLists.txt  LogCodeAssignments.txt  README.md  await_test.c  bin2yaml.c  c-plasma.h  eintr-helper.c  eintr-helper.h  fifo_ops.c  fill_pool.c  fire-and-forget.c  matrix_test.c  meson.build  multi_test.c  nossl.c  ob-lsfd.c  ob-plasma-cert.sh  p-await.c  p-create.c  p-deposit.c  p-info.c  p-list.c  p-list.pod  p-newest-idx.c  p-nth.c  p-oldest-idx.c  p-rename.c  p-resize.c  p-sleep.c  p-stop.c  plasma-retorts.h  plasma-types.h  plasma-util.c  pool-context.c  pool-fifo.c  pool-flock-ops.c  pool-lock-ops.c  pool-log.c  pool-log.h  (+45 more)
libPlasma/c++/: AtomicComposite.cpp  AtomicComposite.h  CMakeLists.txt  CompositeSlaw.cpp  CompositeSlaw.h  Hose.cpp  Hose.h  HoseGang.cpp  HoseGang.h  LogCodeAssignments.txt  Plasma.h  PlasmaForward.h  PlasmaStreams.h  PlasmaxxRetorts.h  Pool.cpp  Pool.h  Protein.cpp  Protein.h  ProteinComposite.cpp  ProteinComposite.h  RefCounted.h  Slaw.cpp  Slaw.h  SlawCons.cpp  SlawCons.h  SlawIterator.cpp  SlawIterator.h  SlawList.cpp  SlawList.h  SlawMap.cpp  SlawMap.h  SlawRef.cpp  SlawRef.h  meson.build  plasma++.md  slaw-traits.h
libPlasma/ruby/: .gitignore  CMakeLists.txt  LogCodeAssignments.txt  Pool.rb  Protein.rb  Slaw.rb  SlawInputFile.rb  SlawOutputFile.rb  bug3787.rb  bug3787.wrap.rb  c-test-feeder.c  cgi-pool.rb  delete-pools.rb  delete-pools.wrap.rb  file-io-test.rb  file-io-test.wrap.rb  hose-extension-tests.rb  hose-extension-tests.wrap.rb  json-tests.rb  json-tests.wrap.rb  many-participates.rb  meson.build  notes-on-ruby-slaw.txt  plasma-mem-exhaust.rb  pool-tests.rb  pool-tests.wrap.rb  r-test-feeder.rb  rubyPlasma.c  rubyPlasmaWrapper.cmake.in  rubyPlasmaWrapper.meson.in  rubySlaw-ilk-macros.h  runruby.rb  slaw-not-tests.rb  slaw-tests.rb  slaw-tests.wrap.rb  standard-tests.sh  test-helpers.rb  types-test.rb  types-test.wrap.rb
libPlasma/zeroconf/: .gitignore  CMakeLists.txt  LogCodeAssignments.txt  PoolServer.cpp  PoolServer.h  Zeroconf.cpp  Zeroconf.h  meson.build  pool-server-zeroconf-adapter.cpp  zeroconf-client-avahi.c  zeroconf-client-bonjour.c  zeroconf-server-avahi.c  zeroconf-server-bonjour.c  zeroconf-services.h  zeroconf-utils.c  zeroconf.doc
(+332 files in other folders)
